app/components/Pin.sass
.pin
  flex: 0 0 550px
  margin: 1em
  border: 1px solid #bdc3c7
  box-sizing: border-box
  // border-radius: .5em

.pin__header
  background: #bdc3c7
  padding: 0.5em
  h2
    font-size: 1.3em
    margin: 0
    padding: 0.2em 0.5em
    display: inline
  a
    color: white
  display: flex
  flex-direction: row
  .pin__header__left
    flex: 1 0 auto
  .pin__header__right
    padding: 0.2em 0.5em
    flex: 0 0 auto

.pin__body
  padding: 0.5em

.pin__settings
  padding: 0.5em
  border-bottom: 1px solid #bdc3c7

.pin__controls
  padding: 1em
  &:empty
    padding: 0em

.pin--disabled
  .pin__header
    background: #bdc3c7 !important

.pin--digital
  .pin__header
    background: #3498db

.pin--analog
  .pin__header
    background: #2ecc71

.visibility-controls > .fa
  margin-right: 0.3em

$smallfontsize: 0.9em

.pin__tag
  background-color: rgba(0,0,0,0.2)
  border-radius: $smallfontsize * 5
  color: white
  display: inline-block
  font-size: $smallfontsize
  line-height: 1
  padding: 0.4em 1.2em
  margin-right: 1em

select
  border: 1px solid #666
  border-radius: 3px
  background: white
  margin-left: 0.5em
  padding: 0.2em

input[type=range] 
  -webkit-appearance: none
  width: 100%
  height: 32px

input[type=range]:focus 
  outline: none

input[type=range]::-webkit-slider-runnable-track 
  width: 100%
  height: 16px
  cursor: pointer
  animate: 0.2s
  background: white
  border-radius: 32px
  background: rgba(0, 0, 0, 0.2)

input[type=range]::-webkit-slider-thumb 
  background: white
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4)
  cursor: pointer
  -webkit-appearance: none
  margin-top: -8px
  border: 0
  border-radius: 32px
  cursor: pointer
  height: 32px
  width: 32px
  padding: 0
  position: relative
  transition: all 0.3s ease
  z-index: 0

